tests/kubernetes/custom-4.1.7/compliant/role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: compliant-role
  namespace: secure-ns
  annotations:
    cluster-access-manager: "enabled"
rules:
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["get"]
