tests/kubernetes/custom-4.1.7/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.1.7-compliant
policies:
  - ../../../../policies/kubernetes/rbac/custom-4.1.7.yaml
resources:
  - role.yaml
results:
  - policy: custom-4.1.7
    rule: check-cluster-access-manager
    resources:
      - compliant-role
    kind: Role
    result: pass
